--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <a href="tel: +79125270701">+7 (912) 527-07-01</a>
       </header>
       <section class="hero-image">
-        <h1 class="heading">Неопознанный Енот</h1>
+        <h1 class="heading">Опознанный Енот</h1>
         <p>Junior верстальщик</p>
       </section>
 
