--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   <body>
     <div class="container">
       <header class="page-header">
-        <a href="#">logo</a>
-      <a href="mailto: daniilvorokosov@mail.ru">daniilvorokosov@mail.ru</a>
-      <a href="tel: +79125270701">+7 (912) 527-07-01</a>
+      <ul class="nav__link">
+        <li class="nav___link-logo"><a href="#">logo</a></li>
+        <li class="nav__ink-mail"><a href="mailto: daniilvorokosov@mail.ru">daniilvorokosov@mail.ru</a></li>
+        <li class="nav__link-phone"><a href="tel: +79125270701">+7 (912) 527-07-01</a></li>
+      </ul>
       </header>
       <section class="hero-image">
         <h1 class="heading">Опознанный Енот</h1>
